include/engine/ecs/Components.h

        // ---------------------------------- Core utility/tag components ----------------------------------

        // Lightweight name (fixed-size). Avoids std::string to remain trivially copyable.
        struct Name {
        public:
            // UTF-8 bytes, null-terminated if shorter than buffer. Keep small for cache.
            char Value[64] = {0};
        };
        // Bitmask-based tag component (32 customizable tags).
        struct TagMask {
        public:
            uint32_t Mask = 0;
        };
        // Enabled/disabled flag for quick filtering.
        struct Active {
        public:
            bool Enabled = true;
        };
        // Tracks source prefab asset for entity instantiation and editor re-import workflows
        struct PrefabLink {
        public:
            // Fixed size buffer for prefab asset path to maintain 
            // trivially copyable status for ECS performance
            static constexpr size_t MaxPathLength = 256;
            char prefabPath[MaxPathLength] = { 0 };     // Path to the prefab file this entity was created from
            PrefabLink() = default;

            // Construct from std::string
            PrefabLink(const std::string& path) { setPath(path); }

            // Safe string copy with null termination guarantee
            void setPath(const std::string& path) {
                strncpy_s(prefabPath, path.c_str(), MaxPathLength - 1);
                prefabPath[MaxPathLength - 1] = '\0'; // Always null-terminate
            }
            // Convert back to std::string for convenience
            std::string getPath() const { return std::string(prefabPath); }
        };
        // Lifetime in seconds; entities with Time <= 0 can be culled by a system.
        struct Lifetime {
        public:
            float Time = 0.0f;
        };
        struct Rotator {
            float RotationSpeed;   // degrees per second
            float RotationOffset;  // starting phase
        };
        // Local transform is relative to parent entity (if any)
        struct LocalTransform { 
        public:
            Vector3D Position{0,0,0};
            Quaternion Rotation{0,0,0,1.f};
            Vector3D Scale{1.f,1.f,1.f};
        };
        // World transform is relative to world origin
        struct WorldTransform { 
        public:
            Matrix4x4 Matrix{};
            bool Dirty = true;
        };
        struct PhysicsMaterial2D {
        public:
            float Friction = 0.2f;               // 0..1
            float Restitution = 0.0f;            // 0..1 (bounciness)
			float PositionCorrectPercent = 0.2f; // 0..1
        };
        // ---------------------------------- 2D kinematics/physics ----------------------------------

        // 2D linear velocity for X/Y; systems should update LocalTransform.Position.X/Y
        // Velocity is the rate of change of position per second.
        struct LinearVelocity2D {
        public:
            Vector2D Value{0.0f, 0.0f};
        };
        // 2D acceleration for X/Y
        // Acceleration is the rate of change of velocity per second.
        struct Acceleration2D {
        public:
            Vector2D Value{0.0f, 0.0f};
        };
        // 2D angular velocity around Z axis (radians/sec); systems rotate LocalTransform.Rotation about Z
        struct AngularVelocity2D {
        public:
            float Value = 0.0f;
        };
        // 2D rigidbody
        struct Rigidbody2D {
        public:
            float Mass = 1.0f;          // Mass <= 0 => static
            float InverseMass = 1.0f;   // Precomputed
            float LinearDamping = 0.0f; // Damping per second
            float AngularDamping = 0.0f;
            float GravityScale = 1.0f;  // Scale world gravity
            uint32_t Flags = 0;         // bit 0: Kinematic, bit 1: UseGravity, bit 2: FixedRotation
        };
        // Axis-aligned or oriented rectangle collider in 2D
        struct BoxCollider2D {
        public:
            Vector2D HalfExtents{0.5f, 0.5f}; // half-size
            Vector2D Offset{0.0f, 0.0f};      // local center offset
            float Rotation = 0.0f;            // local rotation in radians (around Z)
            uint32_t LayerMask = 0xFFFFFFFFu; // collision layer mask
            uint32_t Flags = 0;               // bit 0: IsTrigger
        };
        // Circle collider in 2D
        struct CircleCollider2D {
        public:
            float Radius = 0.5f;
            Vector2D Offset{0.0f, 0.0f};      // local center offset
            uint32_t LayerMask = 0xFFFFFFFFu; // collision layer mask
            uint32_t Flags = 0;               // bit 0: IsTrigger
        };
        // ---------------------------------- Rendering ----------------------------------

        // 2D sprite renderer (for UI/2D layers)
        struct SpriteRenderer2D {   
        public:
            uint32_t TextureId = 0;
            Color Color{1.0f, 1.0f, 1.0f, 1.0f};
            Vector2D Tiling{1.0f, 1.0f};
            Vector2D Offset{0.0f, 0.0f};
            int Width = 0;
            int Height = 0;
        };
        

        // Optional: sprite flipping flags for atlases
        struct SpriteFlip2D {
        public:
            bool FlipX = false;
            bool FlipY = false;
        };
        // Optional: sprite shader options
        struct SpriteShader2D {
        public:
            bool Bloom = false;
        };
        // TODO: Add Shader components

        // ---------------------------------- Animation ----------------------------------

        // Sprite sheet animation configuration (POD)
        struct SpriteSheetAnimation2D {
        public:
            uint32_t TextureId = 0;           // Texture containing the sprite sheet
            int FrameWidth = 0;               // Width of a single frame in pixels
            int FrameHeight = 0;              // Height of a single frame in pixels
            int SheetWidth = 0;               // Total width of the sprite sheet
            int SheetHeight = 0;              // Total height of the sprite sheet
            int StartFrame = 0;               // First frame index in the animation
            int FrameCount = 0;               // Number of frames in the animation
            float FramesPerSecond = 10.0f;    // Animation speed (FPS)
            bool Loop = true;                 // Whether animation loops
            bool Playing = true;              // Whether animation is currently playing
        };
        // Animation state (runtime data, updated by AnimationSystem)
        struct AnimationState2D {
        public:
            int CurrentFrame = 0;             // Current frame index (relative to StartFrame)
            float TimeAccumulator = 0.0f;     // Time accumulated since last frame change
            bool Finished = false;            // True if non-looping animation completed
        };
        // ---------- Minimal 2D shape data for debug rendering ----------
        // Keep these POD to be fast and compatible with archetype moves.

        struct ShapeCircle2D {
        public:
            float Radius = 0.5f;
            Vector2D Offset{0.0f, 0.0f}; // local offset
            Color Color{1.f,1.f,1.f,1.f};
            float Thickness = 1.0f;      // for wireframe; ignored if Filled
            bool Filled = false;
        };
        struct ShapeBox2D {
        public:
            Vector2D HalfExtents{0.5f, 0.5f};
            Vector2D Offset{0.0f, 0.0f};
            Color Color{1.f,1.f,1.f,1.f};
            float Thickness = 1.0f;
            bool Filled = false;
        };
        struct ShapeLine2D {
        public:
            Vector2D A{ 0.0f, 0.0f };     // local-space endpoints
            Vector2D B{ 1.0f, 0.0f };
            Color Color{ 1.f,1.f,1.f,1.f };
            float Thickness = 1.0f;
        };
        // This is the Z-order for 2D rendering; lower values drawn first
        // Can be used with Layer component
        struct ZIndex2D {
        public:
            int16_t ZOrder = 0;  // smaller drawn first
        };
        
        // ---------- Cameras ----------

        struct Camera3D {
        public: 
            bool UsePerspective = false;
            float FOV           = 45.f; // Don't use glm functions outside of graphics
            float NearPlane     = 0.1f;
            float FarPlane      = 100.f;
            float OrthoSize     = 10.f;
            float AspectRatio   = 16.f / 9.f; // width / height
            bool  Active        = false;
        };
        struct Light2D {
        public:
            enum class Type : uint8_t {
                Directional = 0,
                Point = 1
            };

            Type      LightType = Type::Directional;    // defaults to directional
            Vector3D  Position{ 0.f, 0.f, 0.f };        // used if Point
            Vector3D  Direction{ 0.f, -1.f, 0.f };      // used if Directional
            Color     Color{ 1.f, 1.f, 1.f, 1.f };      // RGB intensity
            float     Intensity = 1.0f;                 // brightness scalar
            float     Range = 10.0f;                    // used if Point
            bool      CastsShadows = false;             // for later extensions
        };
        enum class TextAnchor : uint8_t {
            Absolute = 0,    ///< Position is absolute pixels (no anchoring)
            TopLeft,         ///< Offset from top-left corner
            TopRight,        ///< Offset from top-right corner
            BottomLeft,      ///< Offset from bottom-left corner
            BottomRight,     ///< Offset from bottom-right corner
            Center           ///< Offset from screen center
        };
        struct Text {
            static constexpr size_t MaxTextLength = 256;
            char Content[MaxTextLength] = {};   // Text to display
            char FontPath[128] = {};            // Initialize to empty, not with default path
            float PixelSize = 24.0f;
            Color Color = { 1.0f, 1.0f, 1.0f, 1.0f };
            TextAnchor Anchor = TextAnchor::Absolute;

            Text() {
                // Default constructor sets default font
                setFontPath("assets/fonts/Roboto/Roboto-VariableFont_wdth,wght.ttf");
            }

            Text(const char* content,
                float pixelSize = 24.0f,
                const ::Color& color = { 1.0f, 1.0f, 1.0f, 1.0f },
                TextAnchor anchor = TextAnchor::Absolute,
                const char* fontPath = "assets/fonts/Roboto/Roboto-VariableFont_wdth,wght.ttf")
                : PixelSize(pixelSize)
                , Color(color)
                , Anchor(anchor)
            {
                setContent(content);
                setFontPath(fontPath);  // this initializes the empty array
            }

            void setContent(const char* str) {
                if (str) {
                    strncpy_s(Content, str, MaxTextLength - 1);
                    Content[MaxTextLength - 1] = '\0';
                }
            }

            void setFontPath(const char* path) {
                if (path) {
                    strncpy_s(FontPath, path, 127);
                    FontPath[127] = '\0';
                }
            }

            std::string_view getContent() const { return { Content }; }
            std::string_view getFontPath() const { return { FontPath }; }
        };
        struct UIButton {
            int ID;                     // Unique button identifier
            float X, Y, W, H;          // Screen-space coordinates (pixels)
            bool Hovered;
            bool Pressed;
            uint32_t ActionID;         // Maps to action in registry
        };